<resources>
    <!--<string name="app_name">PIEAS Coordinator</string>-->

    <string name="app_name">BS Coordinator</string>
    <string name="title_activity_post_add">Add New Post</string>
    <string name="title_activity_user_list">All Students List</string>
    <string name="post_adapter_instructions">No Post in this Post Group. \n 1) Select another Post Group from Navigation Menu by sliding from left edge of screen. \n 2) Add new Post in this group by clicking + icon or selecting Add Post from menu on top right.</string>
    <string name="user_adapter_instructions">No Student in the Users Table in Database. Add Students by importing CSV file from MainActivity.</string>
    <string name="users_group_adapter_instructions">No Student is selected. Click either of the two buttons to add students.</string>
    <string name="groups_adapter_instructions">No Post Group created yet.</string>
    <string name="comment_adapter_instructions">No one commented in this post.</string>

    <!--activity_login-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="keep_me_log_in">Keep Me Logged In</string>
    <string name="description_app_logo">Application Logo</string>

    <!--nav_header_main-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--activity_main_drawer-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_import_users_from_csv">Import Students from CSV</string>
    <string name="menu_show_all_users">Show All Students</string>

    <!--activity_post_add-->
    <string name="post_title">Post Title</string>
    <string name="post_content">Post Content</string>

    <!--menu_main-->
    <string name="action_create_post">Create Post</string>
    <string name="action_edit_post_group">Edit Post Group</string>
    <string name="action_create_post_group">Create Post Group</string>
    <string name="action_create_user_group">Create Student Group</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!--menu_post_add && menu_create_edit_group-->
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <!--menu_post_view-->
    <string name="action_post_edit">Edit Post</string>
    <string name="action_post_delete">Delete Post</string>
    <string name="action_add_users">Add Students from CSV</string>

    <!--list_item_user-->
    <string name="description_separator">Separator</string>
    <string name="description_delete">Delete User</string>
    <string name="description_edit">Edit User</string>
    <string name="description_unselect">Unselect User</string>

    <!--activity_create_edit_group-->
    <string name="group_title">Group Title</string>
    <string name="group_users">Students In This Group</string>
    <string name="group_add_user_group">Add Student Group</string>
    <string name="group_add_user">Add Single Student</string>

</resources>
