<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/action_create_post"-->
        <!--android:icon="@drawable/baseline_add_circle_outline_24"-->
        <!--android:title="@string/action_create_post"-->
        <!--app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_edit_post_group"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_edit_post_group" />
    <item
        android:id="@+id/action_create_post_group"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/action_create_post_group" />
    <item
        android:id="@+id/action_create_user_group"
        android:title="@string/action_create_user_group" />
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/action_logout"-->
        <!--android:title="@string/action_logout"-->
        <!--app:showAsAction="never" />-->
</menu>
